--- a/readme.org
+++ b/readme.org
@@ -3,7 +3,7 @@
 #+options: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:t
 #+options: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
 #+options: timestamp:t title:t toc:t todo:t |:t
-#+title: Nasy JAX/FLAX Deep Learning Toolkit
+#+title: Nasy JAX/Equinox Deep Learning Toolkit
 #+date: <2023-11-29 Wed>
 #+author: Nasy
 #+email: nasyxx@gmail.com
@@ -15,4 +15,4 @@
 
 * Introduction
 
-Nasy's JAX/FLAX deep learning toolkit.
+Nasy's JAX and Equinox deep learning toolkit.
